--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -68,7 +68,7 @@
   text-align: center;
   padding: 1.5rem;
   margin: 0;
-  color: $lightBackground1;
+  color: rgb(247 254 255);
   font-size: 25px;
   text-align: center;
   font-weight: 700;
